<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SmartNote</string>
    <string name="title_activity_list_note">SmartNote</string>
    <string name="menu_new">New</string>
    <string name="menu_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="no_notes">You haven\'t added any notes yet</string>
    <string name="button_save">Save</string>
	<string name="title">Title</string>
	<string name="content">Content</string>
	<string name="content_hint">Type your note here &#8230;</string>
	<string name="location_hint">Your location &#8230;</string>
	
	<string name="enable_gps">GPS Status</string>
	<string name="enable_gps_dialog">Do you like to enable GPS to store your location, or use Network instead?</string>
	<string name="gps_posBtn">Enable GPS</string>
	<string name="gps_negBtn">Use Network</string>
	<string name="enable_network">Network Status</string>
	<string name="enable_network_dialog">Your Network is disabled</string>
	<string name="network_posBtn">Network On</string>
	<string name="network_negBtn">Stay Off</string>
	<string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
	
    <string name="photoDescription">Click to insert photo</string>
    <string name="recordDescription">Click to insert record</string>
    <string name="stopRecordDescription">Click to stop record</string>
    <string name="playDescription">Click to play record</string>
    <string name="stopDescription">Click to stop record</string>
    <string name="saveDescription">Click to save the current note</string>
    <string name="imageDescription">The image for the current note</string>
</resources>