<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    
    <ImageView 
        android:id="@+id/photo"
        android:contentDescription="@string/photoDescription"
        android:src="@drawable/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true"
        android:fitsSystemWindows="true"
        android:background="@drawable/button" />
    
    <ImageView
        android:id="@+id/record"
        android:src="@drawable/record"
        android:contentDescription="@string/recordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/photo"
        android:layout_toRightOf="@id/photo"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:focusable="true"
        android:background="@drawable/button"
        android:onClick="buttonTapped" />
    
     <ImageView
        android:id="@+id/record_stop"
        android:src="@drawable/stop_record"
        android:contentDescription="@string/stopRecordDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/record"
        android:layout_alignBaseline="@id/photo"
        android:onClick="buttonTapped"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="@drawable/button" />

    <ImageView
        android:id="@+id/play"
        android:src="@drawable/play"
        android:contentDescription="@string/playDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/record_stop"
        android:layout_alignBaseline="@id/photo"
        android:onClick="buttonTapped"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="@drawable/button" />
    
    <ImageView
        android:id="@+id/stop"
        android:src="@drawable/stop"
        android:contentDescription="@string/stopDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/play"
        android:layout_alignBaseline="@id/photo"
        android:onClick="buttonTapped"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="@drawable/button" />
    
    <ImageButton
        android:id="@+id/save"
        android:src="@drawable/save"
        android:contentDescription="@string/saveDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/button" />
    
	<EditText android:id="@+id/title" 
	  	android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@id/photo"
		android:hint="@string/title"/>
	
	<EditText android:id="@+id/location" 
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/title"
		android:hint="@string/location_hint" />
	
	<EditText android:id="@+id/content" 
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="vertical" 
		android:gravity="top"
		android:layout_below="@id/location"
		android:padding="5dip"
		android:hint="@string/content_hint"
		android:background="@color/contentbg"/>
	
	<ImageView
	    android:id="@+id/imageView"
	    android:contentDescription="@string/imageDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true" />
	
</RelativeLayout>